# tuenroll

./: Cargo.toml  DEVELOPER.md  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: release.yml  rust.yml
src/: api.rs  controller.rs  creds.rs  main.rs  models.rs  registry.rs
