[package]
name = "tuenroll"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "multipart"] }
scraper = "0.21.0"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mockito = "1.5.0"
dirs = "5.0"
rpassword = "7.3"
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4"
simplelog = "^0.12.0"
colored = "2"
indicatif = "0.17.9"
tempfile = "3.14.0"
notify-rust = "4.11.3"
