[package]
name = "tuenroll"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "cookies", "multipart", "blocking"] }
scraper = "0.21.0"
tokio = { version = "1.41", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mockito = "1.5.0"
dirs = "5.0"
rpassword = "7.3"
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4"
simplelog = "^0.12.0"
colored = "2"
indicatif = "0.17.9"
tempfile = "3.14.0"
notify-rust = "4.11.3"
time = { version = "0.3.0-alpha-2" }
chrono = "0.4.38"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
async-trait = "0.1.83"
mockall = "0.13.1"
thiserror = "2.0.7"

[target.'cfg(windows)'.dependencies]
winreg = "0.10"
windows = { version = "0.56.0", features = ["Win32_UI", "Win32_UI_WindowsAndMessaging", "Win32_System_Console"] }
